plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.5'
	id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.sh'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-batch'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	testImplementation 'org.springframework.batch:spring-batch-test'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework.security:spring-security-test'
	runtimeOnly 'com.mysql:mysql-connector-j'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

	// Selenium
	implementation 'org.seleniumhq.selenium:selenium-java:4.19.0'

	// ElasticSearch
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'

	//AWS
	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

	//JWT Toekn
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	runtimeOnly  'io.jsonwebtoken:jjwt-impl:0.12.5'
	runtimeOnly  'io.jsonwebtoken:jjwt-jackson:0.12.5'

	// QueryDSL
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'jakarta.annotation:jakarta.annotation-api'
	annotationProcessor 'jakarta.persistence:jakarta.persistence-api'
	annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'

	//Spring AI
	implementation 'org.springframework.ai:spring-ai-openai-spring-boot-starter:1.0.0-M6'
}

def querydslDir = "$buildDir/generated/querydsl"

sourceSets {
	main.java.srcDirs += [ querydslDir ]
}

tasks.withType(JavaCompile) {
	options.getGeneratedSourceOutputDirectory().set(file(querydslDir))
}

// 3. clean 시 생성된 QClass 삭제
clean {
	delete file(querydslDir)
}

tasks.named('test') {
	useJUnitPlatform()
}
